syntax = "proto3";

package inspire.middleware.coin.allocated.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/inspire/middleware/v1/coin/allocated";

import "basetypes/v1/conds.proto";

message CoinAllocatedReq {
    optional uint32 ID           = 10;
    optional string EntID        = 20;
    optional string AppID        = 30;
    optional string CoinConfigID = 40;
    optional string CoinTypeID   = 50;
    optional string UserID       = 60;
    optional string Value        = 70;
    optional string Extra        = 80;
}

message CoinAllocated {
    // @inject_tag: sql:"id"
    uint32          ID              = 10;
    // @inject_tag: sql:"ent_id"
    string          EntID           = 20;
    // @inject_tag: sql:"app_id"
    string          AppID           = 30;
    // @inject_tag: sql:"coin_config_id"
    string          CoinConfigID    = 40;
    // @inject_tag: sql:"coin_type_id"
    string          CoinTypeID      = 50;
    // @inject_tag: sql:"user_id"
    string          UserID          = 60;
    // @inject_tag: sql:"value"
    string          Value           = 70;
    // @inject_tag: sql:"extra"
    string          Extra           = 80;
    // @inject_tag: sql:"created_at"
    uint32          CreatedAt       = 1000;
    // @inject_tag: sql:"updated_at"
    uint32          UpdatedAt       = 1010;
}

message Conds {
    optional basetypes.v1.StringVal  EntID         = 10;
    optional basetypes.v1.StringVal  AppID         = 20;
    optional basetypes.v1.StringSliceVal EntIDs    = 30;
    optional basetypes.v1.StringVal  CoinConfigID  = 40;
    optional basetypes.v1.StringVal  CoinTypeID    = 50;
    optional basetypes.v1.StringVal  UserID        = 60;
    optional basetypes.v1.Uint32Val  ID            = 70;
    optional basetypes.v1.StringVal  Extra         = 80;
}

