syntax = "proto3";

package inspire.middleware.coupon.app.scope.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/inspire/middleware/v1/coupon/app/scope";

import "basetypes/v1/conds.proto";
import "basetypes/inspire/v1/enums.proto";

message ScopeReq {
  optional uint32 ID = 9;
  optional string EntID = 10;
  optional string AppID = 20;
  optional string AppGoodID = 30;
  optional string CouponID = 40;
  optional basetypes.inspire.v1.CouponScope CouponScope = 50;
  optional string GoodID = 60; // only for VerifyCouponScopes
}

message Scope {
  // @inject_tag: sql:"id"
  uint32 ID = 10;
  // @inject_tag: sql:"ent_id"
  string EntID = 11;
  // @inject_tag: sql:"app_id"
  string AppID = 20;
  // @inject_tag: sql:"app_good_id"
  string AppGoodID = 40;
  // @inject_tag: sql:"coupon_id"
  string CouponID = 50;
  // @inject_tag: sql:"coupon_name"
  string CouponName = 60;
  // @inject_tag: sql:"coupon_type"
  string CouponTypeStr = 70;
  basetypes.inspire.v1.CouponType CouponType = 80;
  // @inject_tag: sql:"coupon_scope"
  string CouponScopeStr = 90;
  basetypes.inspire.v1.CouponScope CouponScope = 100;
  // @inject_tag: sql:"coupon_denomination"
  string CouponDenomination = 110;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 1000;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 1010;
}

message Conds {
  optional basetypes.v1.StringVal EntID = 10;
  optional basetypes.v1.StringVal AppID = 20;
  optional basetypes.v1.StringVal AppGoodID = 40;
  optional basetypes.v1.StringVal CouponID = 50;
  optional basetypes.v1.StringSliceVal CouponIDs = 60;
  optional basetypes.v1.Uint32Val CouponScope = 70;
}

