syntax = "proto3";

package inspire.middleware.event.coupon.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/inspire/middleware/v1/event/coupon";

import "google/api/annotations.proto";
import "basetypes/v1/conds.proto";

message EventCouponReq {
    optional uint32 ID           = 10;
    optional string EntID        = 20;
    optional string AppID        = 30;
    optional string EventID      = 40;
    optional string CouponID     = 50;
}

message EventCoupon {
    // @inject_tag: sql:"id"
    uint32          ID              = 10;
    // @inject_tag: sql:"ent_id"
    string          EntID           = 20;
    // @inject_tag: sql:"app_id"
    string          AppID           = 30;
    // @inject_tag: sql:"event_id"
    string          EventID         = 40;
    // @inject_tag: sql:"coupon_id"
    string          CouponID        = 50;
    // @inject_tag: sql:"created_at"
    uint32          CreatedAt       = 1000;
    // @inject_tag: sql:"updated_at"
    uint32          UpdatedAt       = 1010;
}

message Conds {
    optional basetypes.v1.StringVal  EntID         = 10;
    optional basetypes.v1.StringVal  AppID         = 20;
    optional basetypes.v1.StringSliceVal EntIDs    = 30;
    optional basetypes.v1.StringVal  EventID       = 40;
    optional basetypes.v1.StringVal  CouponID      = 50;
    optional basetypes.v1.Uint32Val  ID            = 60;
    optional basetypes.v1.StringSliceVal  EventIDs = 70;
}

